--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@glrodasz/components": "0.1.2",
+    "@glrodasz/components": "^0.1.2",
     "next": "9.5.3",
     "next-transpile-modules": "4.1.0",
     "react": "16.13.1",
