--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,14 @@
     "yarn": ">=1.22.10"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently 'npm:dev:*'",
+    "dev:web": "next dev",
     "dev:api": "json-server --watch db.json --port 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "concurrently": "5.3.0",
     "@glrodasz/components": "*",
     "minireset.css": "0.0.6",
     "next": "9.5.3",
